# trading-rl-agent

./: .coverage  .coverage.cursor.13589.XJcRrMWx  .coveragerc  .coveragerc_temp  .dockerignore  .env  .env.backup  .env.example  .env.locale  .env.locale.sh  .flake8  .gitignore  .pre-commit-config.yaml  =0.0.62  =0.28.0  =0.5.5  =13.0  =2.0.0  ALPACA_INTEGRATION_SUMMARY.md  ARCHITECTURE_RESTRUCTURE.md  CI_CD_PIPELINE_DOCUMENTATION.md  CLAUDE.md  CLEANUP_PLAN.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CLI_COVERAGE_IMPROVEMENT_SUMMARY.md  CLI_MAPPING_SUMMARY.md  CNN_LSTM_DATASET_DOCUMENTATION.md  CNN_LSTM_README.md  CODE_AUDIT_REPORT.md  COMPLETE_PIPELINE_WALKTHROUGH.md  COMPREHENSIVE_TESTING_FRAMEWORK.md  CONTRIBUTING.md  Complete_Pipeline_Walkthrough.ipynb  DATASET_GENERATION_PROCESS.md  DATA_PIPELINE_TEST_COVERAGE_REPORT.md  DEMO_README.md  DEMO_SETUP_SUMMARY.md  DEPENDENCY_ANALYSIS.md  DEPENDENCY_MANAGEMENT.md  (+193 more)
.devcontainer/: # File: test_integration.py  devcontainer.json
.github/: CODEOWNERS
.mypy_cache/: missing_stubs
<MagicMock name='load_settings().backtest.output_dir' id='140199181013344'>/: momentum_report.txt
<Mock name='load_settings().backtest.output_dir' id='139627190667648'>/: momentum_report.txt
<Mock name='load_settings().backtest.output_dir' id='139700547307568'>/: momentum_report.txt
<Mock name='load_settings().backtest.output_dir' id='139725462096256'>/: momentum_report.txt
<Mock name='load_settings().backtest.output_dir' id='139771637565824'>/: momentum_report.txt
<Mock name='load_settings().backtest.output_dir' id='139817051080752'>/: momentum_report.txt
<Mock name='load_settings().backtest.output_dir' id='139824297560448'>/: momentum_report.txt
<Mock name='load_settings().backtest.output_dir' id='139953611540864'>/: momentum_report.txt
<Mock name='load_settings().backtest.output_dir' id='140068266328144'>/: momentum_report.txt
<Mock name='load_settings().backtest.output_dir' id='140148664594656'>/: momentum_report.txt
<Mock name='load_settings().backtest.output_dir' id='140199181010992'>/: momentum_report.txt
<Mock name='load_settings().backtest.output_dir' id='140350723213696'>/: momentum_report.txt
<Mock name='load_settings().backtest.output_dir' id='140366144473472'>/: momentum_report.txt
<Mock name='load_settings().backtest.output_dir' id='140525668345440'>/: momentum_report.txt
backtest_results/: momentum_report.txt  strategy_comparison_report.txt
config/: README.md  local-example.yaml  prod-example.yaml
configs/: alpaca_config_sample.yaml  cnn_lstm_training.yaml  config.yaml  default.yaml  development.yaml  finrl_real_data.yaml  finrl_synthetic_data.yaml  production.yaml  risk_alert_config.yaml  scenario_evaluation.yaml  staging.yaml  unified_config.yaml
data/: sample_training_data_simple_20250607_192034.csv
docs/: ADVANCED_DATASET_DOCUMENTATION.md  ADVANCED_DATASET_README.md  ADVANCED_TESTING.md  ALPACA_INTEGRATION.md  ARCHITECTURE_OVERVIEW.md  BROKER_SETUP.md  BUILD_FIXES.md  CLEANUP_PLAN.md  CNAME  COMPREHENSIVE_TESTING_FRAMEWORK.md  DASHBOARD_README.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_ARCHITECTURE_PLAN.md  DOCUMENTATION_MIGRATION_PLAN.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DOCUMENTATION_STANDARDS.md  EVALUATION_GUIDE.md  EXPERIMENT_OUTPUTS_MANAGEMENT.md  EXPERT_RECOMMENDATIONS_TODO.md  GUI_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STRATEGY.md  INDUSTRY_STANDARDS_MIGRATION.md  MIGRATION_GUIDE.md  Makefile  NEW_PIPELINE_DESIGN.md  NOTEBOOK_BEST_PRACTICES.md  NOTEBOOK_OUTPUTS_GUIDE.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_ATTRIBUTION_GUIDE.md  PRE_COMMIT_SETUP.md  PRODUCTION_ROADMAP.md  RAY_RLLIB_MIGRATION.md  README.md  RISK_ALERT_SYSTEM.md  ROADMAP.md  ROBUST_TESTING_FRAMEWORK.md  SYSTEM_HEALTH_MONITORING.md  TESTING_GUIDE.md  TEST_SUITE_DOCUMENTATION.md  api_reference.md  (+128 more)
examples/: alignment_strategies_comparison.py  alpaca_integration_demo.py  attribution_demo.py  automatic_crypto_alignment.py  backtest_evaluator_example.py  config_example.py  dashboard_example.py  enhanced_market_patterns_demo.py  ensemble_trading_example.py  mixed_portfolio_alignment.py  monte_carlo_var_example.py  new_mixed_portfolio_alignment.py  optimize_sequence_parameters.py  risk_alert_example.py  scenario_evaluation_example.py  simple_transaction_cost_demo.py  standalone_attribution_demo.py  system_health_monitoring_example.py  test_alpaca_integration_basic.py  transaction_cost_modeling_example.py
k8s/: README.md  alerting-rules.yaml  api-service-deployment.yaml  autoscaling.yaml  ci-cd-pipeline.yaml  configmap.yaml  data-pipeline-deployment.yaml  deploy.sh  download-datasets-job.yaml  infrastructure-services.yaml  ingress.yaml  ml-service-deployment.yaml  monitoring-stack.yaml  namespace.yaml  persistent-volumes.yaml  scheduled-backtest-cronjob.yaml  scheduled-backtest-job.yaml  secrets.yaml  trading-engine-deployment.yaml  training-job.yaml
optimization_results/: best_cnn_lstm_config_20250613_151245.json  best_cnn_lstm_config_20250613_151736.json  best_cnn_lstm_config_20250613_162041.json  cnn_lstm_hparam_results_20250613_161918.json  cnn_lstm_hparam_results_20250613_162041.json  cnn_lstm_trials_20250613_162041.csv
samples/: sample_data.csv
scripts/: README.md  build_docs.py  check_imports.py  check_requirements.py  check_type_coverage.py  cleanup_documentation.py  cleanup_experiments.py  cleanup_outputs.py  cleanup_project.py  comprehensive_cleanup.py  dev.py  fix_locale.sh  git-locale-wrapper.sh  git-wrapper.sh  locale-fix.sh  make-docs.sh  manage_test_data.py  monitor_test_coverage.py  optimize_test_suite.py  pre-commit-hook.sh  resolve_dependencies.py  run_advanced_tests.py  run_optimized_tests.py  run_quality_checks.py  run_tests.py  setup_test_environment.sh  standardize_documentation.py  test_advanced_setup.py  test_maintenance.py  train_sample.py  validate_dependencies.py  validate_test_environment.py  verify_gpu.py  verify_setup.py
src/: Full_Pipeline.ipynb  __init__.py  data_pipeline.py  main.py  serve_deployment.py  supervised_model.py  train_cnn_lstm.py  train_rl.py
talib/: __init__.py
(+860 files in other folders)
