[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-agent"
version = "0.2.0"
authors = [
  { name="Author", email="author@example.com" },
]
description = "A trading agent for reinforcement learning."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "alpaca-py>=0.13.1",
    "numpy<2.0.0,>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    "ray[rllib,tune]>=2.6.0,<3.0.0",
    "yfinance>=0.2.0",
    "alpha-vantage>=2.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "websockets==11.0.3",
    "pyyaml>=6.0",
    "typer[all]>=0.9.0",
    "rich~=13.5.2",
    "pyarrow<21.0.0",
    "protobuf<5.0",
    "seaborn>=0.13.0",
    "vaderSentiment>=3.4.0",
    "structlog>=23.1.0",
    "pydantic_settings>=2.0.0",
    "tqdm>=4.66.1",
    "pandas_ta>=0.4.0",
    "ccxt>=4.1.0",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
trade-agent = "trade_agent.cli:app"
